# QwenASR

./: .gitignore  .release-please-manifest.json  ALIGNMENT.md  ANE-ACCELERATION-FINDINGS.md  ANE-POWER-FINDINGS.md  CHANGELOG.md  Cargo.toml  Makefile  PERFORMANCE_OPTIMIZATIONS_EN.md  PERFORMANCE_OPTIMIZATIONS_ZH.md  README.md  auto-research-changes.md  download-models.sh  mac-ane-poc.md  release-please-config.json  report.md  speed-improvement-expirement.md  wer-recovery-experiments.md
bench/: benchmark-all.sh  benchmark-second-state.sh  render_benchmark_report.py  run.sh
crates/qwen-asr/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/qwen-asr-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/qwen-asr-cli/src/: main.rs  opus_decode.rs  serve.rs
crates/qwen-asr-cli/tests/: serve_cli_parity.rs
crates/qwen-asr-cli/tests/fixtures/: sample.opus
crates/qwen-asr/ane/: ane_shim.m
crates/qwen-asr/src/: align.rs  audio.rs  batch.rs  config.rs  context.rs  decoder.rs  encoder.rs  lib.rs  mac_ane.rs  transcribe.rs
crates/qwen-asr/src/kernels/: mod.rs  neon.rs
crates/qwen-asr/tests/: regression.rs
docs/: batched-decode.md  loop-detection.md
flutter/qwen_asr/: IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MICROPHONE_INTEGRATION_COMPLETE.md  PROJECT_COMPLETE_SUMMARY.md  ROADMAP.md  pubspec.yaml
flutter/qwen_asr/android/src/main/kotlin/com/example/qwen_asr/: QwenAsrPlugin.kt
flutter/qwen_asr/example/: REALTIME_ASR_README.md  pubspec.yaml
flutter/qwen_asr/example/android/app/src/main/: AndroidManifest.xml
flutter/qwen_asr/example/ios/Runner/: Info.plist
flutter/qwen_asr/example/lib/: complete_example.dart  realtime_asr_app.dart  streaming_example.dart
flutter/qwen_asr/example/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/qwen_asr/ios/Classes/: QwenAsrPlugin.swift
flutter/qwen_asr/lib/: qwen_asr.dart
flutter/qwen_asr/lib/src/: alignment_result.dart  model_manager.dart  qwen_asr_engine.dart  qwen_asr_stream.dart
flutter/qwen_asr/lib/src/audio/: microphone_recorder.dart
flutter/qwen_asr/lib/src/rust/api/: alignment.dart  qwen_asr_bridge.dart  streaming.dart
flutter/qwen_asr/linux/: CMakeLists.txt  qwen_asr_plugin.cc  qwen_asr_plugin.h
flutter/qwen_asr/rust/src/api/: alignment.rs  mod.rs  qwen_asr_bridge.rs  streaming.rs
flutter/qwen_asr/windows/: CMakeLists.txt  qwen_asr_plugin_c_api.cpp  qwen_asr_plugin_c_api.h
librispeech-wer-bench/: README.md  librispeech_wer.py  run_wer_range.py
