[package]
name = "qwen-asr-cli"
version = "0.7.1"
edition.workspace = true
license.workspace = true
description = "CLI for qwen-asr: Qwen3-ASR speech-to-text"
keywords = ["asr", "speech-recognition", "qwen", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://github.com/huanglizhuo/QwenASR"
homepage = "https://github.com/huanglizhuo/QwenASR"
readme = "README.md"

[[bin]]
name = "qwen-asr"
path = "src/main.rs"

[dependencies]
qwen-asr = { workspace = true }
ureq = "2"
ctrlc = "3"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
